--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Flask-SQLAlchemy==2.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+pkg-resources==0.0.0
 psycopg2==2.6.1
+requests==2.11.1
 SQLAlchemy==1.0.3
 Werkzeug==0.10.4
-wheel==0.24.0
